Updated content and style according to task

--- a/css/styles.css
+++ b/css/styles.css
@@ -33,6 +33,8 @@ header a {
   background-color: #bb0000;
   font-size: 1.5em;
   border-radius: 3px;
+  text-decoration: none;
+  padding: 0px 5px;
 }
 
 .cta-sale {
@@ -67,4 +69,12 @@ footer {
 
 .reviews_images {
   border-radius: 50%;
+}
+
+/* Contact page */
+input,
+select,
+textarea {
+  border-radius: 5px;
+  border: 1px #c4c4c4 solid;
 }
