Updated content and code according to task

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "Boots and Spurs";
-  src: url("../fonts/BootsAndSpurs.ttf") format("truetype");
+  src: url("../fonts/BootsAndSpurs.ttf") format("TrueType");
 }
 
 body {
@@ -14,8 +14,21 @@ h2,
     sans-serif;
 }
 
+img {
+  max-width: 100%;
+}
+
 .product-list h2 {
   font-family: "Roboto", Verdana, Geneva, Tahoma, sans-serif;
+}
+
+header {
+  display: flex;
+  align-items: center;
+}
+
+nav {
+  margin-left: 25px;
 }
 
 nav ul {
@@ -85,14 +98,57 @@ footer {
   background-position-x: right;
   background-position-y: bottom;
   height: 70vh;
+  position: relative;
+}
+
+.welcome_content {
+  position: absolute;
+  text-align: center;
+  top: 100px;
+  left: 100px;
+}
+
+.selling-points {
+  margin: 50px auto;
+}
+
+.selling-points,
+.reviews_content {
+  max-width: 1000px;
+  display: flex;
+}
+
+.selling-points > *,
+.reviews_content > * {
+  flex: 1;
 }
 
 .selling-points_images {
-  border-radius: 100px;
+  border-radius: 50px;
+}
+
+.reviews {
+  text-align: center;
+  padding: 50px;
+}
+
+.reviews_content div {
+  margin: 50px;
+}
+
+.reviews_content {
+  text-align: left;
+  margin: auto;
+}
+
+.reviews_name {
+  display: block;
 }
 
 .reviews_images {
   border-radius: 50%;
+  width: 80px;
+  float: right;
 }
 
 /* Contact page */
@@ -101,4 +157,59 @@ select,
 textarea {
   border-radius: 5px;
   border: 1px #c4c4c4 solid;
+  margin: 10px 10px 10px 0px;
+  padding: 10px;
+}
+
+textarea {
+  height: 65%;
+}
+
+.contact {
+  width: 1000px;
+  margin: 50px auto;
+  text-align: center;
+}
+
+.form-wrapper {
+  display: flex;
+  text-align: left;
+}
+
+.form-wrapper > * {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+/* Product Specific Page */
+
+.product-specific {
+  display: flex;
+  max-width: 1000px;
+  margin: 50px auto;
+}
+
+.product-specific > * {
+  flex: 1;
+}
+
+.product-specific_details {
+  padding: 0px 30px;
+}
+
+.product-specific_details a {
+  display: block;
+  width: 95.767px;
+  margin: auto;
+}
+
+.product-specific_price {
+  font-size: 1.5em;
+}
+
+.product-image_thumbnails {
+  display: flex;
+  gap: 10px;
+  margin-top: 5px;
 }
